Fix: Open options in a normal browser tab (reuse/focus existing tab) to avoid Arc "little window" bug — background.js Fix: Remove invalid CSS property pb from options UI —

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Auto Linker",
-  "version": "1.1.5",
+  "version": "1.2.0",
   "description": "Automatically detects and converts plain-text URLs into clickable hyperlinks on user-specified websites.",
   "permissions": [
     "storage"
@@ -11,6 +11,9 @@
   ],
   "action": {
     "default_title": "Auto Linker"
+  },
+  "background": {
+    "service_worker": "background.js"
   },
   "icons": {
     "16": "icon16.png",
