--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Auto Linker",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "Automatically detects and converts plain-text URLs into clickable hyperlinks on user-specified websites.",
   "permissions": [
     "storage"
@@ -10,7 +10,8 @@
     "<all_urls>"
   ],
   "action": {
-    "default_title": "Auto Linker"
+    "default_title": "Auto Linker",
+    "default_popup": "options.html"
   },
   "background": {
     "service_worker": "background.js"
